# traducir-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  download.sh
src/: main.rs
website/: index.html  script.js  style.css
