[package]
name = "traducir-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.17.1"
rusqlite = "0.29.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.189", features = ["derive"] }
bytes = "1.5.0"
